tests/Record/expected
[<"Bob", 12, "blue"]

"Bob"
12
Error: Can't find an implementation for HasField StudentSchema "grade" ?sa.

(Interactive):1:5--1:32
 1 |     field "grade" exampleRecord
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^


[<"Bob", "blue"]
[<"Bob", 12]
Error: Can't find an implementation for HasField StudentSchema "grade" ?sa.

(Interactive):1:5--1:36
 1 |     dropField "grade" exampleRecord
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


True
False

